fix big button z-index bug

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,12 +21,17 @@ $icon-font-path: '../fonts' !default;
 }
 
 // focus and hover states
+
+.video-js .vjs-control,
+.vjs-icon-close,
+.vjs-volume-bar{
+  z-index: 1;
+}
+
 .video-js .vjs-control,
 .vjs-big-play-button,
 .vjs-icon-close,
 .vjs-volume-bar {
-
-  z-index: 1;
 
   &:focus {
     outline: none;
